# libpeas

./: meson.build  meson_options.txt
libpeas-gtk/: meson.build
loaders/lua5.1/: meson.build
loaders/lua5.1/resources/: meson.build
tests/libpeas/: meson.build
tests/libpeas/introspection/: meson.build
